Add EntradaConsole and improve robustness
Introduce EntradaConsole (safe console input helper) and wire it into Main and AcoesMenu to validate numeric and text input and re-prompt on invalid entries. Centralize timestamp in Emprestimo.agora() and remove duplicated formatters. Make Biblioteca methods return user-facing messages (realizarEmprestimo/realizarDevolucao) and add listarEmprestimosDevolvidos; update EmprestimoRepository/SQLite to support devolvidos, ignore orphan rows, and use Emprestimo.agora() when updating returns. Add DatabaseConnection.fechar() and ensure Main closes Scanner and the DB connection, and wrap menu operations in a try/catch to avoid crashing on unexpected errors. Add a history submenu in the UI and update executar.bat (encoding JVM properties) and documentation/diagrams/README to reflect new features and robustness improvements.